     Folder Buffer and leaves it empty.

     FAILURE RECOVERY: If the cache folder gets corrupted for any
     reason, just delete it from the file system.  A new cache folder
     will be generated upon the next visit.

  CHANGES

   * The right-mouse-button context menu for URL's in messages updated
     to eliminate obsolete web browsers.  Entries added for Firefox,
     Mozilla and Opera.


VM 8.1.0 (2010-03-21)

  KNOWN PROBLEMS:

    * Automatic filling is turned off for some plain text messages for
      safety reasons.  Please help us by sending us sample messages
      for which filling fails.

  MAJOR NEW FEATURES:

    * Support for reading and replying to messages in HTML.

    * Full support for IMAP servers.  (See "IMPROVEMENTS for
      imap-folders" below.) 

  CHANGES:

   ** New boolean variable `vm-word-wrap-paragraphs' controls the word
      wrapping of paragraphs in messages using the longlines library.
      The variable is set to nil by default. When it is set to t,
      paragraphs are word wrapped and the variable
      `vm-fill-paragraphs-containing-long-lines' has no effect.  Set
      it to nil to enable the usual filling functionality.

   ** vm-pgg is not loaded by default because it is a set up as an
      add-on.  Users should load it from their .emacs file by using
      the sequence
           (require 'vm-autoloads)
           (require 'vm-pgg)

   ** The variable `vm-mime-show-alternatives' is deprecated.  Set
      the variable `vm-mime-alternative-select-method' to 'all to
      get the same effect.

  IMPROVEMENTS:

   * The variable `vm-paragraph-fill-column', previously removed in
     earlier versions of this release, is brought back.

   ** The commands `vm-mime-save-all-attachments' and
      `vm-mime-delete-all-attachments' have been moved to the VM core
      (from vm-rfaddons).  New variables:
	 vm-mime-deletable-types 
	    (formerly `vm-mime-delete-all-attachments-types')
	 vm-mime-deletable-type-exceptions